# tidydir

./: Cargo.toml  README.md
src/: database.rs  error.rs  main.rs
